--- a/my_team.html
+++ b/my_team.html
@@ -10,7 +10,7 @@
 		<script src="js/urlAddress.js" type="text/javascript" charset="utf-8"></script>
 		<!-- 生产环境版本，优化了尺寸和速度 -->
 		<script src="https://cdn.jsdelivr.net/npm/vue"></script>
-		<title>个人信息</title>
+		<title>我的团队</title>
 		<style>
 			ul,
 			li {
@@ -20,7 +20,8 @@
 			}
 			
 			p,
-			span {
+			span,
+			input{
 				font-size: 15px;
 				font-weight: 200;
 				padding: 0px;
