--- a/change_pwd.html
+++ b/change_pwd.html
@@ -37,7 +37,7 @@
 	<body>
 		<div id="id_app">
 			<div style="background: #FFFFFF;">
-				<img style="width: 50px;height: 50px;padding: 18px;" src="img/icon_back.png" />
+				<img onclick="history.back()" style="width: 50px;height: 50px;padding: 18px;" src="img/icon_back.png" />
 				<span style="margin-top: 4px;margin-left: -10px;">修改密码</span>
 			</div>
 			<input v-model="old_pwd" type="password" placeholder="请输入当前密码" style="width: 94%;height: 40px;margin-top: 20px;margin-left: 3%;padding-left: 10px;outline: none;"/>
