--- a/main.html
+++ b/main.html
@@ -46,23 +46,26 @@
 				background: #FFFFFF;
 				padding-left: 8px;
 			}
+
 			ul,
 			li {
 				padding: 0;
 				margin: 0;
 				list-style: none
 			}
-			p,span{
+
+			p,
+			span {
 				font-weight: 150;
 			}
 		</style>
 	</head>
 	<body style="background: #f0f0f0;">
 		<div id="id_app">
-			
-			
-		<div >
-			<!-- <ul >
+
+
+			<div>
+				<!-- <ul >
 				<li v-for="(banner,index) in bannerList">
 					<a :href="banner.url"><img :src="banner.img" alt=''></a>
 				</li>
@@ -70,18 +73,18 @@
 					<li @click="clickBannar(index)">{{index + 1}}</li>"
 				</ol>
 			</ul> -->
-			
-		</div>
 
-
-
-		<div style="background: #FFFFFF;padding-top: 20px;padding-bottom: 10px;" id="menu">
-			<div style="width: 25%;">
-				<img style="width: 40%;margin-left: 30%;" src="img/WechatIMG15.png">
-				<p style="width: 100%;text-align: center;font-size: 12px;margin-top: 4px;">新闻公告</p>
 			</div>
-		</div>
-		
+
+
+
+			<div style="background: #FFFFFF;padding-top: 20px;padding-bottom: 10px;" id="menu">
+				<div style="width: 25%;">
+					<img style="width: 40%;margin-left: 30%;" src="img/WechatIMG15.png">
+					<p style="width: 100%;text-align: center;font-size: 12px;margin-top: 4px;">新闻公告</p>
+				</div>
+			</div>
+
 			<div class="wrap">
 				<div class="cont">
 					<ul class="state">
@@ -101,7 +104,8 @@
 						<div style="display: inline-block;margin-left: 10px;">
 							<p style="margin-left: 20px;margin-top: 10px;">要求: {{data.task_name}}</p>
 							<p style="margin-left: 20px;margin-top: -4px;">需方: {{data.name}}</p>
-							<p style="margin-left: 20px;margin-top: -4px;border: #FF3159 solid 1px; border-radius: 12px;color: #FF3159;text-align: center;">剩余: {{data.count}}</p>
+							<p style="margin-left: 20px;margin-top: -4px;border: #FF3159 solid 1px; border-radius: 12px;color: #FF3159;text-align: center;">剩余:
+								{{data.count}}</p>
 						</div>
 						<div style="display: inline-block;margin-left: 10px;height: 90px;float: right;margin-right: 20px;">
 							<p style="height: 20px;line-height: 45px;font-size: 14px;font-weight: bold;color: #FF3159;text-align: center;">¥{{data.money}}元</p>
@@ -111,8 +115,26 @@
 				</li>
 			</ul>
 		</div>
+		<p style="height: 70px;"></p>
 
-
+		<div style="position: fixed;bottom: 0px;z-index: 999;width: 100%;background: #FFFFFF;line-height: 20px;padding-top: 10px;">
+			<div style="width: 24%;display: inline-block;text-align: center;">
+				<img style="width: 20px;" src="img/icon_tab_sy_2.png">
+				<p style="margin-top: 4px;font-size: 12px;color: #FF3159;">首页</p>
+			</div>
+			<div onclick="location.href='task.html'" style="width: 24%;display: inline-block;text-align: center;">
+				<img style="width: 20px;" src="img/icon_tab_rw_1.png">
+				<p style="margin-top: 4px;font-size: 12px;">任务</p>
+			</div>
+			<div onclick="location.href='updata_pay.html'" style="width: 24%;display: inline-block;text-align: center;">
+				<img style="width: 20px;" src="img/icon_tab_gm_1.png">
+				<p style="margin-top: 4px;font-size: 12px;">购买</p>
+			</div>
+			<div onclick="location.href='me.html'" style="width: 24%;display: inline-block;text-align: center;">
+				<img style="width: 20px;" src="img/icon_tab_wd_1.png">
+				<p style="margin-top: 4px;font-size: 12px;">我的</p>
+			</div>
+		</div>
 
 
 
@@ -127,7 +149,7 @@
 			data: {
 				titles: titleList,
 				datas: datas,
-				bannerList:bannerList
+				bannerList: bannerList
 			},
 			methods: {
 				/**
@@ -166,13 +188,13 @@
 				/**
 				 * 接取任务
 				 */
-				receiveTask:function(id){
+				receiveTask: function(id) {
 					ajax({
 						method: 'POST',
 						dataType: "json",
 						url: RECEIVE_TASK + "?access-token=" + localStorage.getItem('access-token'),
-						data:{
-							task_id:id
+						data: {
+							task_id: id
 						},
 						success: function(obj) {
 							if (obj.success) {
@@ -181,14 +203,14 @@
 								alert(obj.message)
 							}
 						}
-						
+
 					});
 				}
-			
+
 			}
 		});
 
-		
+
 
 		ajax({
 			method: 'POST',
@@ -217,6 +239,5 @@
 				}
 			}
 		})
-		
 	</script>
 </html>
