--- a/message_list.html
+++ b/message_list.html
@@ -35,7 +35,7 @@
 	<body>
 		<div id="id_app">
 			<div style="background: #FFFFFF;">
-				<img style="width: 50px;height: 50px;padding: 18px;" src="img/icon_back.png" />
+				<img onclick="history.back()" style="width: 50px;height: 50px;padding: 18px;" src="img/icon_back.png" />
 				<span style="margin-top: 4px;margin-left: -10px;">消息中心</span>
 			</div>
 			<ul style="margin-top: 3%;">
