--- a/my_team.html
+++ b/my_team.html
@@ -35,7 +35,7 @@
 	</head>
 	<body>
 		<div id="id_app">
-			<div style="background: #FFFFFF;">
+			<div onclick="history.back()" style="background: #FFFFFF;">
 				<img style="width: 50px;height: 50px;padding: 18px;" src="img/icon_back.png" />
 				<span style="margin-top: 4px;margin-left: -10px;">我的团队</span>
 			</div>
