--- a/submit_task.html
+++ b/submit_task.html
@@ -8,7 +8,6 @@
 		<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" />
 		<script src="js/utils.js" type="text/javascript" charset="utf-8"></script>
 		<script src="js/urlAddress.js" type="text/javascript" charset="utf-8"></script>
-		<script src="js/updata_pay.js" type="text/javascript" charset="utf-8"></script>
 		<!-- 生产环境版本，优化了尺寸和速度 -->
 		<script src="https://cdn.jsdelivr.net/npm/vue"></script>
 		<title></title>
@@ -18,7 +17,6 @@
 			input {
 				font-weight: 100;
 			}
-
 			body {
 				background: #F7F7F7;
 			}
@@ -26,7 +24,7 @@
 	</head>
 	<body>
 		<div id="id_app">
-			<div style="background: #FFFFFF;">
+			<div onclick="history.back()" style="background: #FFFFFF;">
 				<img style="width: 50px;height: 50px;padding: 18px;" src="img/icon_back.png" />
 				<span style="margin-top: 4px;margin-left: -10px;">提交任务</span>
 			</div>
@@ -41,16 +39,13 @@
 		</div>
 	</body>
 	<script>
-		var filePath;
-		var ID = GetQueryString("id");
-		var taskName = GetQueryString("taskName");
-		var taskMoney = GetQueryString("taskMoney");
 		var app = new Vue({
 			el: "#id_app",
 			data: {
-				filePath: filePath,
-				taskName: taskName,
-				taskMoney: taskMoney
+				filePath: '',
+				taskName: GetQueryString("taskName"),
+				taskMoney: GetQueryString("taskMoney"),
+				ID:GetQueryString("id"),
 			},
 			methods: {
 				submit: function() {
@@ -58,8 +53,8 @@
 						method: 'POST',
 						url: SUBMIT_TASK + "?access-token=" + localStorage.getItem('access-token'),
 						data: {
-							img: filePath,
-							id:ID
+							img: this.filePath,
+							id:this.ID
 						},
 						success: function(obj) {
 							if (obj.success) {
@@ -75,18 +70,6 @@
 				}
 			}
 		});
-
-		function getObjectURL(file) {
-			var url = null;
-			if (window.createObjcectURL != undefined) {
-				url = window.createObjcectURL(file);
-			} else if (window.URL != undefined) {
-				url = window.URL.createObjectURL(file);
-			} else if (window.webkitURL != undefined) {
-				url = window.webkitURL.createObjectURL(file);
-			}
-			return url;
-		}
 
 		function showPicture(imgFile) {
 			document.getElementById("id_img").src = window.URL.createObjectURL(imgFile.files[0]);
