--- a/message_info.html
+++ b/message_info.html
@@ -36,23 +36,20 @@
 		<div id="id_app">
 			<div style="background: #FFFFFF;">
 				<img onclick="history.back()" style="width: 50px;height: 50px;padding: 18px;" src="img/icon_back.png" />
-				<span style="margin-top: 4px;margin-left: -10px;">消息中心</span>
+				<span style="margin-top: 4px;margin-left: -10px;">{{title}}</span>
 			</div>
-			<ul style="margin-top: 3%;">
-				<li @click="newsInfo(data.ID)" v-for="data in datas" style="background: #FFFFFF;height: 50px;line-height: 50px;padding-left: 12px;padding-right: 5px;border-bottom: #E5E5E5 solid 1px;">
-					<div>
-						<span>{{data.title}}</span>
-						<img style="height: 50px;width: 50px;float: right;padding: 16px;" src="img/icon_more.png" >
-					</div>
-				</li>
-			</ul>
+			
+			<p style="font-size: 12px;margin-left: 12px;margin-top: 20px;margin-right: 12px;">最近更新:  {{time}}</p>
+			<p v-html="content" style="margin-left: 12px;margin-top: 10px;margin-right: 12px;"></p>
 		</div>
 	</body>
 	<script>
 		var app = new Vue({
 			el:"#id_app",
 			data:{
-				datas:[],
+				title:'',
+				time:'',
+				content:''
 			},
 			mounted(){
 				this.getData();
@@ -62,25 +59,18 @@
 					var that = this;
 					ajax({
 						method: 'POST',
-						url: NEWS_LIST + "?access-token=" + localStorage.getItem('access-token'),
+						data:{
+							id:GetQueryString("id")
+						},
+						url: NEWS_INFO + "?access-token=" + localStorage.getItem('access-token'),
 						success: function(obj) {
-							for (var i = 0; i < obj.data.length; i++) {
-								var newsObj = obj.data[i];
-								that.datas.push(that.news(newsObj.title,newsObj.ID));
-							}
+							that.title = obj.data.title;
+							that.time = getLocalTime(obj.data.create_time);
+							that.content = obj.data.content;
 						}
 					})
 				},
-				news:function(title,ID){
-					var message = new Object();
-					message.title = title;
-					message.ID = ID;
-					return message;
-				},
-				newsInfo:function(ID){
-					location.href = "message_info.html?id=" + ID;
-				}
-				
+			
 			}
 		});
 	</script>
