--- a/login.html
+++ b/login.html
@@ -53,7 +53,7 @@
 						method: 'POST',
 						url: LOGIN,
 						data:{
-							username:that.user_account,
+							phone:that.user_account,
 							password:that.user_pwd
 						},
 						success: function(obj) {
