--- a/updata_pay.html
+++ b/updata_pay.html
@@ -106,8 +106,8 @@
 									that.datas.push(that.Packge(
 										packge.ID,
 										packge.add_time,
-										//packge.description,
-										'这里是描述',
+										packge.description,
+										// '这里是描述',
 										packge.name,
 										StringToFloat(packge.price),
 										packge.sort,
